squash daily bugs

--- a/client/app/main/main.css
+++ b/client/app/main/main.css
@@ -88,6 +88,7 @@
   }
   .orange{
     color:orange !important;
+    background-color : black; 
   }
   .blue{
     color:blue !important;
